# video-downloader

./: .coveragerc  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
tests/: test_cli.py  test_lib.py
video_downloader/: __init__.py  __main__.py  cli.py  lib.py  main.py
