[tool.poetry]
name = "video-downloader"
version = "0.1.0"
description = ""
authors = ["Gustavo Soares <gustavo.soares.cdc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
pytube = "^12.0.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
video-downloader = "video_downloader.cli:entry_point"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
