[tool.poetry]
name = "video-downloader"
version = "0.1.0"
description = ""
authors = ["Gustavo Soares <gustavo.soares.cdc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
pytube = "^12.0.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
pytest = "^7.1.1"
pre-commit = "^2.17.0"
pytest-cov = "^3.0.0"
coverage-badge = "^1.1.0"

[tool.poetry.scripts]
video-downloader = "video_downloader.cli:entry_point"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
